# knowledge-clustering

./: .coverage  .gitignore  .knowledges.lp  LICENSE.md  Makefile  README.md  anakin.py  call_asp.py  clingo_from_python.py  clustering.py  config.py  constraints.lp  diagnose.py  distance.py  kltex.py  knowledge.py  main-klcl.py  main_klcl.py  mergeNotions.py  parse_asp.py  pyproject.toml  scope_meaning.py  setup.cfg  setup.py  test.py
config/: english.config
examples/: big.tex  lettre.diagnose  main-lmfi.diagnose  ord.diagnose  ord.tex  preservation.diagnose  preservation.tex  small.diagnose  small.tex
examples/ordinal/: ordinal.diagnose  ordinal.kl
examples/phd/: default.kl  thesis-morvan.diagnose
knowledge_clustering/: __version__.py  _version.py  add_AP.py  add_anchor.py  add_quotes.py  autofinder.py  check_update.py  clustering.py  config.py  cst.py  diagnose.py  distance.py  file_updater.py  kltex.py  knowledge.py  knowledges.py  misc.py  scope_meaning.py  test.py  tex_code.py  tex_document.py
knowledge_clustering/data/: english.ini  french.ini
knowledge_clustering/scripts/: app.py
src/knowledge_clustering/: diagnose.py  distance.py
src/knowledge_clustering/examples/: small.tex
tests/: .ordinal.kl.original  .ordinal.kl.solution  .ordinal.tex.original  ordinal.tex  test_addquotes.py  test_anchor.py  test_app.py  test_autofinder.py  test_clustering.py
