[metadata]
name = knowledge-clustering
version = 0.2.2
author = Rémi Morvan
author_email = remi@morvan.xyz
description = Automated notion clustering for the knowledge LaTeX package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remimorvan/knowledge-clustering
project_urls =
    Bug Tracker = https://github.com/remimorvan/knowledge-clustering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    knowledge :: latex :: clustering

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click
    nltk

[options.package_data]
    * = *.txt, data/*

[options.entry_points]
console_scripts =
        knowledge = knowledge_clustering.scripts.app:cli
