[metadata]
name = knowledge-clustering
version = attr: knowledge_clustering.__version__.__version__
author = Rémi Morvan
author_email = remi@morvan.xyz
description = Automated notion clustering for the knowledge LaTeX package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remimorvan/knowledge-clustering
project_urls =
    Bug Tracker = https://github.com/remimorvan/knowledge-clustering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    knowledge :: latex :: clustering

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click
    click_default_group
    nltk
    spacy
    toposort

[options.package_data]
* = data/*

[options.entry_points]
console_scripts =
        knowledge = knowledge_clustering.scripts.app:cli

[options.extras_require]
tests =
    pytest, filecmp